# api/swagger/swagger.yaml
@@ -4,9 +4,9 @@ info:
   title: Hello World App
 # during dev, should point to your local machine
 host: localhost:3000
-# basePath prefixes all resource paths 
-basePath: /api/
-# 
+# basePath prefixes all resource paths
+basePath: /api
+#
 schemes:
   # tip: remove http to make production-grade
   - http
@@ -18,6 +18,26 @@ consumes:
 produces:
   - application/json
 paths:
+  /dataset/all:
+    x-swagger-router-controller: dataset
+    get:
+      description: Returns all datasets
+      operationId: getDatasets
+      responses:
+        200:
+          description: Success
+          schema:
+            $ref: "#/definitions/DataSets"
+  /dataset/united:
+    x-swagger-router-controller: dataset
+    get:
+      description: Returns all datasets
+      operationId: getUnitedDatasets
+      responses:
+        200:
+          description: Success
+          schema:
+            $ref: "#/definitions/Dataset"
   /hello:
     # binds a127 app logic to a route
     x-swagger-router-controller: hello_world
@@ -32,7 +52,7 @@ paths:
           required: false
           type: string
       responses:
-        "200":
+        200:
           description: Success
           schema:
             # a pointer to a definition
@@ -48,7 +68,7 @@ paths:
       description: Returns information about project
       operationId: about
       responses:
-        "200":
+        200:
           description: Success
           schema:
             $ref: "#/definitions/AboutResponse"
@@ -70,3 +90,33 @@ definitions:
     properties:
       message:
         type: string
+  DataSets:
+    properties:
+      datasets:
+        type: array
+        items:
+          type: string
+  Dataset:
+    properties:
+      fields:
+        type: array
+        items:
+          properties:
+            id:
+              type: string
+            type:
+              type: string
+      records:
+        type: array
+        items:
+          properties:
+            District:
+              type: string
+            Code:
+              type: string
+            Plan:
+              type: string
+            Fact:
+              type: string
+            fond:
+              type: string
